final commit, likes are still nonfunctional if you want to revisit

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link href="./styles.css" rel="stylesheet">
-    <title>Campuswire Lite</title>
+    <title>Fake Twitter</title>
   </head>
   <body>
     <div id="app"></div>
